static/styles.css
/* ... */
.sticky {
    position: fixed;
    top: 0;
    width: 100%;
}

.sticky + .content {
    padding-top: 60px;
}

.secondary-nav {
    text-align:center;
    padding:1.5em;
}

.session{
    background-color:var(--brand-yellow);
    color:var(--brand-dark-gray);
    text-align:center;
    font-size: 2em;
}

.index-links{
    text-decoration: none;
}

/*--- Layout --- */

.light-gray-bg {
    background-color: var(--brand-light-gray);
}

.yellow-bg{
    background-color: var(--brand-yellow);
}

.dark-gray-bg {
    background-color: var(--brand-dark-gray);
}

.white-bg {
    background-color: var(--brand-white);
}

.welcome-box{
    text-align: center;
    background-color:rgba(248,216,101,.8);
    transform: translateX(150px);
    max-width:48%;
    padding-bottom:3em;  
}

.container-fluid{
    padding:0;
}

.container-m{
    background-color: rgb(255,255,255);
    overflow:auto;
    margin-bottom: 1.5em;
    margin-top: 1.5em;
    margin-left: 0;
    margin-right: 0;
}

.aboutus-container{
    background-color: rgb(255,255,255);
    margin-bottom: 1.5em;
    margin-top: 1.5em;
    margin-left: 0;
    margin-right: 0;
    padding-top:1em;
    padding-bottom:1em;
}

.container-hero {
    border:3px solid white;
    padding: 0 1em 2em 1em;
}

.img-container {
    position: relative;
    background-color: var(--brand-light-gray);
    border: 0.5em solid white;
}

.main-container {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
}

.container {
    flex: 1;
    flex-flow: column wrap;
    justify-content: center;
    border-radius:3%;
    margin-left:1em;
    margin-right:1em;
    margin-top: 10px;
    padding: 5px;
}

.contactus-container {
    border-radius:5px;
    border:5px solid var(--brand-dark-gray);
    padding:30px;
    margin-top:1em;
    margin-bottom:1em;
    margin-left:1em;
    margin-right:1em;
}

.upcoming-container {
    min-width: 900px;
    padding-bottom:2em;
}

.recent-container {
    min-width: 200px;
    max-height:605px;
    overflow: scroll;
}

.col-lg-7, .col-lg-5, .col-lg-6 {
    border: 0 solid white;
}

.col-md-4{
    border: 0 solid white;
    padding-top:2em;
    padding-bottom: 2em;
}

.grid-container {
    display: grid;
    grid-template-columns: auto auto;
    gap: 4em;
    margin-left:6em;
    margin-right:6em;
    margin-top:2em;
    margin-bottom:2em;
    padding:2em;
    position:relative;
}

.grid-container > div {
    text-align: center;
    font-size: 30px;
}

.row {
    padding: 1em 0 1em 0;
}

.aboutus-card{
    box-shadow: 0 4px 8px 0 rgba(70,67,68,0.4);
    transition: 0.3s; 
    max-width:80%;
    min-height: 100%;
    margin-left:5em;
    margin-right:5em;
    margin-top:2em;
    padding-top:2em;
    border:0 solid blue;
}

.aboutus-card:hover {
    box-shadow: 0 8px 16px 0 rgba(70,67,68,0.4);
}

.aboutus-button {
    border: 1px solid transparent;
    outline: 0;
    display:block;
    letter-spacing: 2px;
    color:var(--brand-dark-gray);
    vertical-align: middle;
    user-select: none;
    margin:auto;
    background-color:var(--brand-yellow);
    text-align: center;
    cursor: pointer;
    width: 50%;
    font-size: 15px;
    text-transform: uppercase;
    padding: 0.75em 0.5em 0.75em 0.5em;
    overflow: hidden;
}

.aboutus-button:hover {
    opacity: 0.7;
    color:var(--brand-white);
}

.card {
    --bs-card-border-color:0px white;
}

.news-card {
    padding:0.5em;
    margin-left: 10px;
    margin-right: 10px;
    overflow: auto;
    justify-content: space-between;
    flex-wrap: wrap;
    flex: 1;
}

.card-title {
    text-align:center;
}

/* news page */

.recent-news-heading {
    font-size: 2.5em;
    text-align: center;
    font-weight:400;
    margin: 0;
    color: var(--brand-black);
}

.recent-news-subheading {
    font-size: 1.5em;
    text-align: center;
    font-weight:300;
    margin: 0;
    color: var(--brand-black);
}

.recent-news-text {
    text-align:center;
    color: var(--brand-dark-gray);
    margin:auto;
    line-height:20px;
}

.recent-news-containers {
    border-radius:10px;
    margin-left:0.5em;
    margin-right:0.5em;
    padding:1em;
    margin-top:0;
}

.recent-news-button {
    transition: none !important;
    border-radius: 2px;
    background-color: var(--brand-white);
    color:var(--brand-dark-gray);
    border-color:var(--brand-dark-gray);
    position: relative;
    text-align:center;
    display:inline-block;
    padding: 0.4em 0.6em;
}

.schedule-button {
    transition: none !important;
    border-radius: 2px;
    background-color: var(--brand-white);
    color:var(--brand-dark-gray);
    border-color:var(--brand-dark-gray);
    position: relative;
    text-align:center;
    display:inline-block;
    padding: 0.4em 0.6em;
    margin: 0.1em;
}

.meta{
    text-align:right;
}

.meta-text{
    font-style: italic;
    font-weight:300;
    text-align:right;
    color:var(--brand-dark-gray);
    padding:0.5em;
    font-size:0.75em;
}

/*--- Footer --- */

.footer-content{
    background-color: var(--brand-dark-gray);
    text-align: center;
    padding: 1em 0 0.25em 0;
    color: var(--brand-white);
}

.footer-content p:first-child{
    font-weight: 600;
    font-size: 1.5em;
    text-align: center;
}

.footer-content p:nth-child(2){
    font-weight: 400;
    font-size: 1em;
    text-align: center;
    padding-bottom: 0.25em;
}

.footer-link{
    font-size:1em;
    padding: 0.25em;
    color: var(--brand-white);
}

.footer-link:hover{
    color:var(--brand-yellow)
}

/* resources */

.accordion{
  --bs-accordion-bg:var(--brand-light-gray);
  --bs-accordion-btn-focus-border-color:var(--brand-dark-gray);
  --bs-accordion-active-color:var(--brand-white);
  --bs-accordion-active-bg:var(--brand-white);
  --bs-accordion-border-width:10px;
}

.accordion-item{
  background-color:var(--brand-white);
  border: var(--bs-accordion-border-width) solid var(--brand-white);
}

.accordion-button{
    border-bottom: 1px solid white;
    font-size: 2em;
    color:white;
}
/* ... */

